--- a/templates/dashboard/guru/kelas-not-found.html
+++ b/templates/dashboard/guru/kelas-not-found.html
@@ -3,6 +3,9 @@
 {% block content %}
     {% include 'components/navbar.html' %}
     <main id="main">
-        Anda belum terdaftar menjadi walikelas kelas manapun
+        <div class="h-100 kelas-404">
+            <h2>Anda belum terdaftar menjadi walikelas kelas manapun</h2>
+            <ion-icon name="sad" class="kelas-404-icon"></ion-icon>
+        </div>
     </main>
 {% endblock content %}
